--- a/public/index.html
+++ b/public/index.html
@@ -25,7 +25,8 @@
     <noscript>
       You need to enable JavaScript to run this app.
     </noscript>
-    <div id="root" style="background: red"></div>
+    <!-- <div id="root" style="background: red"></div> -->
+    <div id="root"></div>
     <!--
       This HTML file is a template.
       If you open it directly in the browser, you will see an empty page.
