修改     *修复 icon图标中含有数字文件名的icon     *替换 使用之前使用icon的文件

--- a/src/widgets/css/font/lugia-icon.html
+++ b/src/widgets/css/font/lugia-icon.html
@@ -67,11 +67,11 @@
         }
         @font-face {
     font-family: "lugia-icon";
-    src: url("./lugia-icon.eot?2d00cee3a8f24017f7af82721c4c2215?#iefix") format("embedded-opentype"),
-url("./lugia-icon.woff2?2d00cee3a8f24017f7af82721c4c2215") format("woff2"),
-url("./lugia-icon.woff?2d00cee3a8f24017f7af82721c4c2215") format("woff"),
-url("./lugia-icon.ttf?2d00cee3a8f24017f7af82721c4c2215") format("truetype"),
-url("./lugia-icon.svg?2d00cee3a8f24017f7af82721c4c2215#lugia-icon") format("svg");
+    src: url("./lugia-icon.eot?6e0927e0e09a545f1b854193f94ca90f?#iefix") format("embedded-opentype"),
+url("./lugia-icon.woff2?6e0927e0e09a545f1b854193f94ca90f") format("woff2"),
+url("./lugia-icon.woff?6e0927e0e09a545f1b854193f94ca90f") format("woff"),
+url("./lugia-icon.ttf?6e0927e0e09a545f1b854193f94ca90f") format("truetype"),
+url("./lugia-icon.svg?6e0927e0e09a545f1b854193f94ca90f#lugia-icon") format("svg");
 }
 
 i {
@@ -156,7 +156,7 @@ i[class^="lugia-icon-"]:before, i[class*=" lugia-icon-"]:before {
 .lugia-icon-direction_down:before {
     content: "\f113";
 }
-.lugia-icon-direction_enter-57:before {
+.lugia-icon-direction_enter_c:before {
     content: "\f114";
 }
 .lugia-icon-direction_enter:before {
@@ -273,22 +273,22 @@ i[class^="lugia-icon-"]:before, i[class*=" lugia-icon-"]:before {
 .lugia-icon-direction_verticle_right:before {
     content: "\f13a";
 }
-.lugia-icon-finacial1_check_all:before {
+.lugia-icon-finacial_check_all:before {
     content: "\f13b";
 }
-.lugia-icon-finacial1_copy:before {
+.lugia-icon-finacial_copy:before {
     content: "\f13c";
 }
-.lugia-icon-finacial1_deselection:before {
+.lugia-icon-finacial_deselection:before {
     content: "\f13d";
 }
-.lugia-icon-finacial1_fail:before {
+.lugia-icon-finacial_fail:before {
     content: "\f13e";
 }
-.lugia-icon-finacial1_half_star:before {
+.lugia-icon-finacial_half_star:before {
     content: "\f13f";
 }
-.lugia-icon-finacial1_hide_code:before {
+.lugia-icon-finacial_hide_code:before {
     content: "\f140";
 }
 .lugia-icon-financial_abort:before {
@@ -462,10 +462,10 @@ i[class^="lugia-icon-"]:before, i[class*=" lugia-icon-"]:before {
 .lugia-icon-financial_Hourglass:before {
     content: "\f179";
 }
-.lugia-icon-financial_information-124:before {
+.lugia-icon-financial_information_c:before {
     content: "\f17a";
 }
-.lugia-icon-financial_information-89:before {
+.lugia-icon-financial_information:before {
     content: "\f17b";
 }
 .lugia-icon-financial_italic:before {
@@ -717,10 +717,10 @@ i[class^="lugia-icon-"]:before, i[class*=" lugia-icon-"]:before {
 .lugia-icon-financial_video_camera:before {
     content: "\f1ce";
 }
-.lugia-icon-financial_voice-102:before {
+.lugia-icon-financial_voice_z:before {
     content: "\f1cf";
 }
-.lugia-icon-financial_voice-53:before {
+.lugia-icon-financial_voice:before {
     content: "\f1d0";
 }
 .lugia-icon-financial_wallet:before {
@@ -1176,11 +1176,11 @@ i[class^="lugia-icon-"]:before, i[class*=" lugia-icon-"]:before {
 
 
         <div class="preview">
-            <span class="inner" title="lugia-icon-direction_enter-57">
-                <i class="lugia-icon-direction_enter-57"></i>
+            <span class="inner" title="lugia-icon-direction_enter_c">
+                <i class="lugia-icon-direction_enter_c"></i>
             </span>
             <br>
-            <span class='label'>direction_enter-57</span>
+            <span class='label'>direction_enter_c</span>
         </div>
 
 
@@ -1527,56 +1527,56 @@ i[class^="lugia-icon-"]:before, i[class*=" lugia-icon-"]:before {
 
 
         <div class="preview">
-            <span class="inner" title="lugia-icon-finacial1_check_all">
-                <i class="lugia-icon-finacial1_check_all"></i>
+            <span class="inner" title="lugia-icon-finacial_check_all">
+                <i class="lugia-icon-finacial_check_all"></i>
             </span>
             <br>
-            <span class='label'>finacial1_check_all</span>
+            <span class='label'>finacial_check_all</span>
         </div>
 
 
         <div class="preview">
-            <span class="inner" title="lugia-icon-finacial1_copy">
-                <i class="lugia-icon-finacial1_copy"></i>
+            <span class="inner" title="lugia-icon-finacial_copy">
+                <i class="lugia-icon-finacial_copy"></i>
             </span>
             <br>
-            <span class='label'>finacial1_copy</span>
+            <span class='label'>finacial_copy</span>
         </div>
 
 
         <div class="preview">
-            <span class="inner" title="lugia-icon-finacial1_deselection">
-                <i class="lugia-icon-finacial1_deselection"></i>
+            <span class="inner" title="lugia-icon-finacial_deselection">
+                <i class="lugia-icon-finacial_deselection"></i>
             </span>
             <br>
-            <span class='label'>finacial1_deselection</span>
+            <span class='label'>finacial_deselection</span>
         </div>
 
 
         <div class="preview">
-            <span class="inner" title="lugia-icon-finacial1_fail">
-                <i class="lugia-icon-finacial1_fail"></i>
+            <span class="inner" title="lugia-icon-finacial_fail">
+                <i class="lugia-icon-finacial_fail"></i>
             </span>
             <br>
-            <span class='label'>finacial1_fail</span>
+            <span class='label'>finacial_fail</span>
         </div>
 
 
         <div class="preview">
-            <span class="inner" title="lugia-icon-finacial1_half_star">
-                <i class="lugia-icon-finacial1_half_star"></i>
+            <span class="inner" title="lugia-icon-finacial_half_star">
+                <i class="lugia-icon-finacial_half_star"></i>
             </span>
             <br>
-            <span class='label'>finacial1_half_star</span>
+            <span class='label'>finacial_half_star</span>
         </div>
 
 
         <div class="preview">
-            <span class="inner" title="lugia-icon-finacial1_hide_code">
-                <i class="lugia-icon-finacial1_hide_code"></i>
+            <span class="inner" title="lugia-icon-finacial_hide_code">
+                <i class="lugia-icon-finacial_hide_code"></i>
             </span>
             <br>
-            <span class='label'>finacial1_hide_code</span>
+            <span class='label'>finacial_hide_code</span>
         </div>
 
 
@@ -2094,20 +2094,20 @@ i[class^="lugia-icon-"]:before, i[class*=" lugia-icon-"]:before {
 
 
         <div class="preview">
-            <span class="inner" title="lugia-icon-financial_information-124">
-                <i class="lugia-icon-financial_information-124"></i>
+            <span class="inner" title="lugia-icon-financial_information_c">
+                <i class="lugia-icon-financial_information_c"></i>
             </span>
             <br>
-            <span class='label'>financial_information-124</span>
+            <span class='label'>financial_information_c</span>
         </div>
 
 
         <div class="preview">
-            <span class="inner" title="lugia-icon-financial_information-89">
-                <i class="lugia-icon-financial_information-89"></i>
+            <span class="inner" title="lugia-icon-financial_information">
+                <i class="lugia-icon-financial_information"></i>
             </span>
             <br>
-            <span class='label'>financial_information-89</span>
+            <span class='label'>financial_information</span>
         </div>
 
 
@@ -2859,20 +2859,20 @@ i[class^="lugia-icon-"]:before, i[class*=" lugia-icon-"]:before {
 
 
         <div class="preview">
-            <span class="inner" title="lugia-icon-financial_voice-102">
-                <i class="lugia-icon-financial_voice-102"></i>
+            <span class="inner" title="lugia-icon-financial_voice_z">
+                <i class="lugia-icon-financial_voice_z"></i>
             </span>
             <br>
-            <span class='label'>financial_voice-102</span>
+            <span class='label'>financial_voice_z</span>
         </div>
 
 
         <div class="preview">
-            <span class="inner" title="lugia-icon-financial_voice-53">
-                <i class="lugia-icon-financial_voice-53"></i>
+            <span class="inner" title="lugia-icon-financial_voice">
+                <i class="lugia-icon-financial_voice"></i>
             </span>
             <br>
-            <span class='label'>financial_voice-53</span>
+            <span class='label'>financial_voice</span>
         </div>
 
 
