update：增加彩色图标

--- a/src/widgets/css/font/lugia-icon.html
+++ b/src/widgets/css/font/lugia-icon.html
@@ -67,11 +67,11 @@
         }
         @font-face {
     font-family: "lugia-icon";
-    src: url("./lugia-icon.eot?748943decd69d9233f41196380e29556?#iefix") format("embedded-opentype"),
-url("./lugia-icon.woff2?748943decd69d9233f41196380e29556") format("woff2"),
-url("./lugia-icon.woff?748943decd69d9233f41196380e29556") format("woff"),
-url("./lugia-icon.ttf?748943decd69d9233f41196380e29556") format("truetype"),
-url("./lugia-icon.svg?748943decd69d9233f41196380e29556#lugia-icon") format("svg");
+    src: url("./lugia-icon.eot?da84b059ca4798bf118412fda20363a6?#iefix") format("embedded-opentype"),
+url("./lugia-icon.woff2?da84b059ca4798bf118412fda20363a6") format("woff2"),
+url("./lugia-icon.woff?da84b059ca4798bf118412fda20363a6") format("woff"),
+url("./lugia-icon.ttf?da84b059ca4798bf118412fda20363a6") format("truetype"),
+url("./lugia-icon.svg?da84b059ca4798bf118412fda20363a6#lugia-icon") format("svg");
 }
 
 i {
@@ -1047,8 +1047,14 @@ i[class^="lugia-icon-"]:before, i[class*=" lugia-icon-"]:before {
 .lugia-icon-reminder_warning:before {
     content: "\f23c";
 }
-.lugia-icon-symbol_basic:before {
+.lugia-icon-symbol__audit_error_color:before {
     content: "\f23d";
+}
+.lugia-icon-symbol_audit:before {
+    content: "\f23e";
+}
+.lugia-icon-symbol_reverse_audit:before {
+    content: "\f23f";
 }
 
 .lugia-icon-utils-loading:before {
@@ -1071,7 +1077,7 @@ i[class^="lugia-icon-"]:before, i[class*=" lugia-icon-"]:before {
 </head>
 <body>
 
-    <h1>lugia-icon<span class="icon-num">317</span></h1>
+    <h1>lugia-icon<span class="icon-num">319</span></h1>
 
     <p id="copy-info"></p>
 
@@ -3921,12 +3927,31 @@ i[class^="lugia-icon-"]:before, i[class*=" lugia-icon-"]:before {
 
 
         <div class="preview">
-            <span class="inner" title="lugia-icon-symbol_basic">
-                <i class="lugia-icon-symbol_basic"></i>
+            <span class="inner" title="lugia-icon-symbol__audit_error_color">
+                <i class="lugia-icon-symbol__audit_error_color"></i>
             </span>
             <br>
-            <span class='label'>symbol_basic</span>
+            <span class='label'>symbol__audit_error_color</span>
         </div>
+
+
+        <div class="preview">
+            <span class="inner" title="lugia-icon-symbol_audit">
+                <i class="lugia-icon-symbol_audit"></i>
+            </span>
+            <br>
+            <span class='label'>symbol_audit</span>
+        </div>
+
+
+        <div class="preview">
+            <span class="inner" title="lugia-icon-symbol_reverse_audit">
+                <i class="lugia-icon-symbol_reverse_audit"></i>
+            </span>
+            <br>
+            <span class='label'>symbol_reverse_audit</span>
+        </div>
+
 
     <script type="text/javascript">
       const copySupport = document.queryCommandSupported('copy');
